--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,19 @@ p #contactWord {
     cursor: default;
 }
 
+.top {
+    margin-top: 0 !important;
+}
+
+.codepen {
+    margin: 22px 0;
+    box-shadow: 2px 2px 20px #808080;
+}
+
+#codepen-section p {
+    margin-top: 40px;
+    text-align: center;
+}
 
 /* CONTACT - MAP  */
 
