--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ p #contactWord {
     text-decoration: none;
 }
 
-.social-media-list {
+.profile-list {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -192,7 +192,7 @@ p #contactWord {
     font-size: 3rem;
 }
 
-.social-media {
+.profiles {
     margin: 0 20px;
     color: #262626;
     opacity: 0.9;
@@ -201,7 +201,7 @@ p #contactWord {
     -moz-transition: all .4s ease-in-out;
 }
 
-.social-media:hover {
+.profiles:hover {
     opacity: 0.7;
 }
 
